--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.3",
+    "expo": "^50.0.4",
     "expo-status-bar": "~1.11.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.2",
-    "tailwindcss-react-native": "^1.7.10"
+    "react-native": "^0.73.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
